<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mars Colony Scoring</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
	<string-array name="spinner_score">
    	<item>One</item>
    	<item>Two</item>
    	<item>Three</item>
	</string-array>
</resources>
